Bug 494410 - autocomplete fields with completeDefaultIndex can't be reasonably edited (r=gavin)